tests/paczka1/small_fuzzy/43543263.err
Error in line 3: JWE1V1 S763 21,8
Error in line 1: P4RND S103 53,0
Error in line 13: ibv S103 139,13
Error in line 12: jlTG S763 72,9
